# wild-ktv

./: .gitignore  README.md  config.sample.yaml  pyproject.toml
src/: main.py  run.py  wildktv.kv
src/wild_ktv/: __init__.py  app.py  config.py  model.py  share.py  wildktv.kv
src/wild_ktv/lyrics/: __init__.py  enum.py  match.py
src/wild_ktv/lyrics/converter/: __init__.py  ass.py  lrc.py  share.py  srt.py
src/wild_ktv/lyrics/decryptor/: __init__.py  tripledes.py
src/wild_ktv/lyrics/provider/: __init__.py  kg.py  ne.py  qm.py
src/wild_ktv/player/: mpv_player.py
src/wild_ktv/provider/: __init__.py  igeba.py  local.py
src/wild_ktv/screen/: album.kv  album.py  artist.kv  artist.py  artist_songs.kv  artist_songs.py  main.kv  main.py  manage.kv  manage.py  player.kv  player.py  search.kv  search.py  song_list.kv  song_list.py  tag.kv  tag.py
src/wild_ktv/ui/: album_card.py  album_list.py  artist_card.py  artist_list.py  control_bar.py  main_window.py  player_view.py  search_view.py  song_list.py
src/wild_ktv/uix/: album.kv  album.py  artist.kv  artist.py  controlbar.kv  controlbar.py  lrc.kv  lrc.py  navbar.kv  navbar.py  playlist.kv  playlist.py  song.kv  song.py  tag.kv  tag.py  topbar.kv  topbar.py  video.py  vkb.json
src/wild_ktv/utils/: asyncio.py  lyrics.py  time.py
src/wild_ktv/video/: controller.py  video.py
