[project]
name = "wild-ktv"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Jasper.Z", email = "jasper.zsh@hotmail.com" }
]
dependencies = [
    "kivy[base,media]>=2.3.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "aiosqlite>=0.20.0",
    "pyyaml>=6.0.2",
    "ffpyplayer>=4.5.2",
    "ffprobe-python>=1.0.3",
]
readme = "README.md"
requires-python = ">= 3.9"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "flask>=3.1.0",
    "setuptools>=75.6.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/wild_ktv"]
