[project]
name = "wild-ktv"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Jasper.Z", email = "jasper.zsh@hotmail.com" }
]
dependencies = [
    "kivy[base,media]>=2.3.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "aiosqlite>=0.20.0",
    "pyyaml>=6.0.2",
    "ffpyplayer>=4.5.2",
    "ffprobe-python>=1.0.3",
    "aiofiles>=24.1.0",
    "aiohttp>=3.11.10",
    "pyaes>=1.6.1",
    "mpv>=1.0.7",
    "qasync>=0.27.1",
    "pyqt6==6.6.1",
    "pyqt6-fluent-widgets[full]>=1.7.3",
    "pyqt6-qt6==6.6.1",
    "pyopengl>=3.1.7",
]
readme = "README.md"
requires-python = ">= 3.9"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "flask>=3.1.0",
    "setuptools>=75.6.0",
    "snakeviz>=2.2.2",
    "pyqtinspect>=0.3.6",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/wild_ktv"]
